--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
       placeat officia iure sint, ipsa deleniti quibusdam reiciendis deserunt?
       Dolor dicta soluta blanditiis.
     </p>
+    <div class="empty">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, illum.
+        Dolorem, reprehenderit! Beatae qui sed dolorem itaque eos sapiente quam
+        consequatur possimus! Voluptas commodi nemo hic, nisi quidem temporibus
+        beatae!
+      </p>
+    </div>
   </body>
 </html>
