--- a/main.html
+++ b/main.html
@@ -26,5 +26,6 @@
       itaque veniam voluptates doloremque expedita labore asperiores illum.
       Placeat explicabo provident cum.
     </p>
+    <button>main submit</button>
   </body>
 </html>
