--- a/pages/dot.html
+++ b/pages/dot.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h2>something on github</h2>
-    <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <button>submit</button>
   </body>
 </html>
