--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,5 +8,6 @@
   <body>
     <h3>project storage</h3>
     <p>github is great version control system</p>
+    <button>submit</button>
   </body>
 </html>
